[gd_scene load_steps=2 format=2]

[ext_resource path="res://debug_tools/DebugInfo.gd" type="Script" id=1]

[node name="DebugInfo" type="VBoxContainer"]
margin_right = 40.0
margin_bottom = 14.0
rect_scale = Vector2( 1.5, 1.5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextPanel" type="PanelContainer" parent="."]
margin_right = 40.0
margin_bottom = 32.0

[node name="VBoxContainer" type="VBoxContainer" parent="TextPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 33.0
margin_bottom = 25.0

[node name="TextInfo" type="Label" parent="TextPanel/VBoxContainer"]
margin_right = 26.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugPlots" type="VBoxContainer" parent="TextPanel/VBoxContainer"]
margin_top = 18.0
margin_right = 26.0
margin_bottom = 18.0
__meta__ = {
"_edit_use_anchors_": false
}
